system24.css
/* ... */
/* remove borders */
[class^='dot_'][class*='maskSecondary_'] {
	border: none;
}

/* fix border hover effect */
[class^='chatContent_']:has([class^='messagesWrapper_']:hover) {
	[class^='typing_'] {
		border-color: var(--border-hover-color);
	}
}

/* move chat bar out */
:root {
	--custom-channel-textarea-text-area-height: 56px;
}
.form_a7d72e {
	padding: 0;
	width: 100%;
	display: flex;
	flex-direction: column;
	margin-top: 0;
}
.form_a7d72e:after,
.form_a7d72e:before {
	display: none !important;
}
[class^='form_'] [class^='channelTextArea_'] {
	margin: 0;
	margin-top: var(--pad);
	border-radius: 0;
	box-sizing: border-box;
}
[class^='typing_'] {
	background: var(--bg-0);
	order: -1;
	position: static;
	border: var(--border-width) solid var(--border-color);
	border-top: none;
	transition: border-color var(--border-transition);
}
[class^='chatContent_']:has([class^='typing_']) > [class^='messagesWrapper_'] {
	border-bottom: none;
}
.clipContainer_b11c5e {
	margin-top: 0;
}
.textArea_d0696b {
	display: flex;
	flex-direction: column;
	justify-content: center;
}
.attachButton_f298d4 {
	height: var(--custom-channel-textarea-text-area-height);
}
/* make header bar height match chat bar */
.container_fc4f04,
.container_b2ca13 {
	height: var(--custom-channel-textarea-text-area-height);
	box-sizing: border-box;
}

/* fix chat bar when no chat bar */
[class^='form_'] > [class^='wrapper_'] {
	margin: 0;
	padding: 0;
	height: var(--custom-channel-textarea-text-area-height);
	border: var(--border-width) solid var(--border-color);
	margin-top: var(--pad);
}

/* add text labels */
[class^='sidebar_'] > [class^='container_']::after,
.container_fc4f04::after,
[class^='chatContent_'] > [class^='messagesWrapper_']::after,
[class^='panels_']::after,
[class^='form_'] [class^='channelTextArea_']::after,
[class*='guilds_']::after,
[class^='membersWrap_']::after,
[class^='privateChannels_']::after,
.container_a6d69a::after,
[class^='profilePanel_']::after,
[class^='searchResultsWrap_']::after,
.scroller_fb4810::after,
[class^='peopleColumn_']::after,
[class^='nowPlayingColumn_']::after {
	display: block;
	color: var(--txt-3);
	font-weight: var(--label-font-weight);
	position: absolute;
	top: -10px;
	left: 8px;
	background-color: var(--bg-0);
	padding: 0 4px;
	z-index: 100;
	transition: color var(--border-transition);
}
[class^='sidebar_'] > [class^='container_']::after {
	content: 'server';
}
.container_fc4f04::after {
	content: 'channel';
	top: -11px;
}
[class^='chatContent_'] > [class^='messagesWrapper_']::after,
.scroller_fb4810::after {
	content: 'messages';
}
[class^='panels_']::after {
	content: 'user';
}
[class^='form_'] [class^='channelTextArea_']::after {
	content: 'input';
}
[class*='guilds_']::after {
	content: 'nav';
}
[class^='membersWrap_']::after {
	content: 'members';
}
[class^='privateChannels_']::after {
	content: 'dms';
}
.container_a6d69a::after {
	content: 'forum';
}
[class^='profilePanel_']::after {
	content: 'profile';
}
[class^='searchResultsWrap_']::after {
	content: 'search';
}
[class^='peopleColumn_']::after {
	content: 'friends';
}
[class^='nowPlayingColumn_']::after {
	content: 'activity';
}

/* fix hidden text labels */
#app-mount [class^=sidebar_],
.chat_a7d72e /* header bar */,
.wrapper_fea3ef /* server list */,
[class^=privateChannels_] /* dms */,
.container_c2739c /* friends page header */,
[class^=searchResultsWrap_] /* search results */,
[class^=peopleColumn_] /* friends page */ ,
.tabBody_c2739c /* friends page outer */,
.container_d1c246 /* thread outer */,
[class^=container_] > [class^=base_] {
	overflow: visible;
}
.scroller_fb4810 /* new thread messages box */ {
	overflow: visible !important;
}
/* fix text label position */
.panels_a4d4d9,
[class^='nowPlayingColumn_'] {
	position: relative;
}
/* fix overflow visible */
[class^=privateChannels_] /* dms */,
[class^=tabBody_] /* friends page */ {
	min-height: 0;
}
[class^='container_'] > [class^='base_'] {
	min-width: 0;
}
/* add padding to make label not look weird */
.scroller_e2e187 /* main chat */,
.newMessagesBar_cf58b5 {
	top: var(--txt-pad);
}
.animatedContainer_fd6364 /* server banner */ {
	top: var(--txt-pad);
	left: var(--txt-pad);
	width: calc(100% - 2 * var(--txt-pad));
}
#vc-spotify-player,
.container_adcaac /* vc panel */ {
	padding: var(--txt-pad) var(--txt-pad) calc(var(--txt-pad) / 2)
		var(--txt-pad);
}
.horizontal_bba380 > .flex_bba380 /* fix voice connected cut off */ {
	margin-left: 4px;
}
[class*='guilds_'],
[class^='membersWrap_'] {
	padding-top: var(--txt-pad);
}
[class^='membersWrap_'] {
	height: calc(100% - var(--txt-pad) - 2 * var(--border-width));
}
/* add padding to user profile panel */
aside[class^='profilePanel_'] {
	padding: var(--txt-pad);
}
[class^='userPanelInner_']:before {
	height: calc(100% - 2 * var(--txt-pad));
	width: calc(100% - 2 * var(--txt-pad));
}

/* vencord spotify progress bar */
#vc-spotify-player {
	--vc-spotify-green: var(--green);
}
#vc-spotify-progress-bar {
	margin-bottom: 0.6em;
}
#vc-spotify-progress-bar [class^='bar_'] {
	height: 20px;
	border-radius: 0;
	background: var(--bg-1);
}
.vc-spotify-time-left,
.vc-spotify-time-right {
	z-index: 1;
	top: 4px;
	mix-blend-mode: difference;
	font-size: 14px;
}
.vc-spotify-time-left {
	left: 6px;
}
.vc-spotify-time-right {
	right: 6px;
}
.grabber_c7a159 {
	visibility: hidden;
}

/* wordmark */
.wordmarkWindows_a934d8 > svg {
	display: none;
}
.wordmarkWindows_a934d8::after {
	content: var(--corner-text);
	display: block;
	position: relative;
	color: var(--txt-2);
	margin-left: 6px;
	width: 100px;
	height: 12px;
	font-family: var(--font-primary);
	font-size: 16px;
	font-weight: 500;
}

/* adjust divider/border thickness */
#app-mount [class^='divider_'],
.container_c75f85:after,
[class^='peopleListItem_'] {
	border-width: var(--border-width);
}
[class^='unreadPill_'][class*='endCap_'] {
	top: calc(-6px - 0.5 * var(--border-width));
}
/* ... */

